--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,11 +24,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-
+    implementation 'androidx.appcompat:appcompat:1.0.2'
 
     implementation 'com.google.firebase:firebase-firestore:18.2.0'
     implementation 'com.google.firebase:firebase-database:19.2.1'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation "androidx.drawerlayout:drawerlayout:1.0.0"
 
     // FirebaseUI for Real-time database
     implementation 'com.firebaseui:firebase-ui-database:6.2.0'
@@ -43,8 +46,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.jakewharton:butterknife:10.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
 
     implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
